Removed all "Padding" variables in StructuredBuffer, they're not needed in modern GPU.
Applied spot light calculation to deferred pass. Applied spot light to translucent as well.

29-09-2023: Applied spot light RT shadows too. Runtime spot light is almost done, the next is to expose editor stuffs.
Fixed the attenuation in RT shadow shader. Finished the spot light editor stuffs.

09-10-2023: Rename graph builder as render builder. Start bringing ImGui library. Alternate all "VK_NULL_HANDLE" to nullptr.
For ImGui, the swapchain behavior is changed. I can now show the demo window, but it will spam vk error if it's outside the window.
After some modifications, showing ImGui won't trigger error.

10-10-2023: Store the swapchain format/colorspace in ImGui Vulkan init info, so the GUI buffer will be consistent as UHE swap chain.
Finished setting dialog ImGui porting.

15-10-2023: Finished profile dialog ImGui porting. Stores all dialogs as pointer instead an instance.
19-10-2023: Finished world dialog ImGui porting. Refactored all -1 to UHINDEXNONE (-1 as well).
Finished detail dialog ImGui porting.
20-10-2023: Finished texture dialog ImGui porting.

23-10-2023: Started the EXR texture import implementation. Organized both Vulkan/FBX SDK to the ThirdParty folder too.
24-10-2023: Added support for EXR images. Let texture editor automatically correct the linear/compression setting consistency.
Two bugs to solve: 
(1) Stack overflow in release editor when importing EXR. (Fixed)
(2) Can't switch after creation. (Fixed)
Removed unnecessary reverse of motion translucent bundles.

25-10-2023: Customized texture formats and replaced most VkFormat parameter as UHTextureFormat.
Merged world and detail GUI and always display it in editor mode. Still need to find a way of hiding resize grip of ImGui window.
Improved release build render thread efficiency.