@@ -15,8 +15,8 @@ public:
 	void Release();
 
 	void AllocateMemory(uint64_t InBudget, uint32_t MemTypeIndex);
-	uint64_t BindMemory(uint64_t InSize, VkBuffer InBuffer);
-	uint64_t BindMemory(uint64_t InSize, VkImage InImage, uint64_t ReboundOffset = ~0);
+	uint64_t BindMemory(uint64_t InSize, uint64_t InAlignment, VkBuffer InBuffer);
+	uint64_t BindMemory(uint64_t InSize, uint64_t InAlignment, VkImage InImage, uint64_t ReboundOffset = ~0);
 	VkDeviceMemory GetMemory() const;
 
 private:
