@@ -15,20 +15,19 @@ Size=191,48
 Collapsed=0
 
 [Window][UHE Settings]
-ViewportPos=712,280
+ViewportPos=994,175
 ViewportId=0x30F54064
 Size=683,773
 Collapsed=0
 
 [Window][UHE Profile]
-ViewportPos=1403,101
-ViewportId=0x51F6EF2D
+Pos=636,408
 Size=567,369
 Collapsed=0
 
 [Window][World Objects]
-Pos=1396,0
-Size=280,1034
+Pos=1365,0
+Size=280,955
 Collapsed=0
 
 [Window][Details]
@@ -37,7 +36,7 @@ Size=294,475
 Collapsed=0
 
 [Window][Texture Editor]
-ViewportPos=58,67
+ViewportPos=192,111
 ViewportId=0x7361E594
 Size=1429,978
 Collapsed=0
